<resources>
    <string name="app_name">My BMI Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="reset_data">Reset Data</string>
    <string name="last_caculated_date">Last Caculated Date:</string>
    <string name="last_caculated_bmi">Last Caculated BMI:0.0</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
</resources>
